# webview-overlay

./: LICENSE  README.md  pyproject.toml
examples/: demo.py  timetracker_demo.py  tt.css  tt.js
src/webview_overlay/: __init__.py  app.py  assets.py  config.py  jsapi.py  layout.py  net.py  store.py  tray.py  win32.py
src/webview_overlay/assets/: base.css  index.html  overlay-base.js
tests/: test_assets.py  test_config.py  test_layout.py  test_shell_mode.py  test_store.py
tests/preview/: preview-shell.html  preview.html
