[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webview-overlay"
version = "0.1.0"
description = "Generic frameless WebView2 dashboard overlay for Windows (pywebview)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["overlay", "webview", "pywebview", "windows", "dashboard"]
classifiers = [
    "Environment :: Win32 (MS Windows)",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Desktop Environment",
]
dependencies = ["pywebview>=5,<7"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
webview-overlay = "webview_overlay.app:cli"

[tool.hatch.build.targets.wheel]
# The whole package dir (incl. the bundled assets/ data files) is included
# by default under the src layout — no force-include needed.
packages = ["src/webview_overlay"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/examples", "/README.md", "/LICENSE"]
